--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 
     <div id="grid"></div>
 
-    <br>
     <div id="buttons">
-      <button id="start">Start game</button>
+      <!-- <button id="start">Start game</button> -->
 
       <div id="dpad">
         <button id="up">↑</button>
