--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <button id="right">→</button>
         <button id="down">↓</button>
       </div>
+      <br />
+      <button id="resetButton">Reset Game</button>
     </div>
 
     <script type="module" src="./scripts/controller.js"></script>
